@@ -1,2 +1,5 @@
 ajwillia.ms (Andy Williams) <andy@andywilliams.me>
 
+
+With sections from Ecrire by Tom Hacohen <tom@stosb.com>
+
